:bug: bug: 문법 오류 수정